# gateway-proto

./: Cargo.toml  README  build.rs  go.mod  go.sum  justfile
.github/workflows/: bump.yml  cargo-audit.yaml  ci.yaml  govulncheck-scan.yaml
cmd/gwtestctl/: main.go
examples/: config_client.go  gateway_config.yaml
grpc-playground/go_client/: go.mod  go.sum  main.go
grpc-playground/go_client/dataplane/grpc/: dataplane.pb.go  dataplane_grpc.pb.go
grpc-playground/proto/: dataplane.proto
grpc-playground/proto/dataplane/grpc/: dataplane.pb.go
grpc-playground/rust_server/: Cargo.toml  build.rs
grpc-playground/rust_server/src/: main.rs
grpc-playground/rust_server/src/protobuf/: config.rs
hack/: tools.just
pkg/dataplane/: dataplane.pb.go  dataplane_grpc.pb.go
pkg/gwtestctl/: client.go
proto/: dataplane.proto
src/: duration.rs  lib.rs
src/bolero/: bgp.rs  device.rs  expose.rs  gateway_config.rs  impl_peering_as.rs  impl_peering_i_ps.rs  interface.rs  mod.rs  status.rs  support.rs  test_support.rs  vpc.rs  vrf.rs
tests/: simple_test.rs
