[package]
name = "gateway_config"
version = "0.19.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.87.0"

[features]
default = []
bolero = ["dep:bolero"]
regenerate = ["dep:tonic-build", "dep:tonic-prost-build", "dep:protoc-bin-vendored"]

[dependencies]
bolero = { version = "0.13.4", features = [
    "alloc",
    "arbitrary",
    "std",
], optional = true }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14.1"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.17"

[dev-dependencies]
tower = "0.5.2"
thiserror = { version = "2.0.17", features = ["std"] }
tokio-stream = { version = "0.1", features = ["net"] }
bolero = { version = "0.13.4", features = [
    "alloc",
    "arbitrary",
    "std",
]}

[build-dependencies]
tonic-build = { version = "0.14", optional = true }
tonic-prost-build = { version = "0.14", optional = true }
protoc-bin-vendored = { version = "3.2.0", optional = true }
